fix body scroll on mobile

--- a/app/assets/stylesheets/modal_fullscreen.scss
+++ b/app/assets/stylesheets/modal_fullscreen.scss
@@ -1,5 +1,7 @@
 body.modal-open {
   overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 .modal-fullscreen {
   background: transparent;
